# Survey_analysis

./: .gitignore  README.md  main.html  pyproject.toml
src/mental_health/: main.ipynb
src/mental_health/utils/: data_processing.py  logs.py  plots.py  prevelance_rate_CI.py
