[tool.poetry]
name = "mental_health"
version = "0.1.0"
description = "Analysis of mental health in tech workplace"
authors = ["Justinas"]
readme = "README.md"
package-mode = true
packages = [
    { include = "mental_health", from = "src" }
]

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.1"
pandas = "^2.2.3"
seaborn = "^0.13.2"
kagglehub = "^0.3.10"
plotly = "^6.0.0"
nbformat = "^5.10.4"
scipy = "^1.15.2"
wordcloud = "^1.9.4"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
poetry = "^2.1.1"
ipykernel = "^6.29.5"

[tool.pytest.ini_options]
pythonpath = "src"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
